Added reset modal

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Bug Jump</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Bug Jump</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+  <div class="modal__background">
+    <div class="modal__container">
+      <p class="modal__message"></p>
+      <p>Score <span class="modal__score">0</span></p>
+      <p class="modal__header">Play Again?</p>
+      <button onclick="resetGame();" class="modal__button">Click me</button>
+    </div>
+  </div>>
+
+  </div>
+  <script src="js/resources.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/engine.js"></script>
 </body>
+
 </html>
