--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
   <div class="modal__background">
     <div class="modal__container">
-      <p class="modal__message"></p>
-      <p>Score <span class="modal__score">0</span></p>
-      <p class="modal__header">Play Again?</p>
-      <button onclick="resetGame();" class="modal__button">Click me</button>
+      <p class="modal__header">Game Over</p>
+      <p class="modal__message">Did not win this time</p>
+      <p class="modal__highscore">High Score: </p>
+      <p>Score: <span class="modal__score">0</span></p>
+      <button onclick="resetGame();" class="modal__button">Play Again?</button>
     </div>
   </div>>
 
