Added a game over image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
   <div class="modal__background">
     <div class="modal__container">
+      <img class="modal__image" src="images/char-boy-game-over.png" alt="Game Character">
       <p class="modal__header">Game Over</p>
-      <p class="modal__message">Did not win this time</p>
+      <p class="modal__message">Did not win this time!</p>
       <p class="modal__highscore">High Score: </p>
       <p>Score: <span class="modal__score">0</span></p>
       <button onclick="resetGame();" class="modal__button">Play Again?</button>
