Added gems to game over screen

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 <body>
   <div class="modal__background">
     <div class="modal__container">
-      <img class="modal__image" src="images/char-boy-game-over.png" alt="Game Character">
+      <img src="images/char-boy-game-over.png" alt="Sad game character">
       <p class="modal__header">Game Over</p>
       <p class="modal__message">Did not win this time!</p>
+      <div class="modal__image__container">
+        <img class="modal__gems" src="images/gem-green.png">
+        <img class="modal__gems" src="images/gem-blue.png">
+        <img class="modal__gems" src="images/gem-orange.png">
+      </div>
+      <p>Final Score:
+        <span class="modal__score">0</span>
+      </p>
       <p class="modal__highscore">High Score: </p>
-      <p>Score: <span class="modal__score">0</span></p>
       <button onclick="resetGame();" class="modal__button">Play Again?</button>
     </div>
   </div>>
