--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
       <img src="images/char-boy-game-over.png" alt="Sad game character">
       <p class="modal__header">Game Over</p>
       <p class="modal__message">Did not win this time!</p>
-      <div class="modal__image__container">
-        <img class="modal__gems" src="images/gem-green.png">
-        <img class="modal__gems" src="images/gem-blue.png">
-        <img class="modal__gems" src="images/gem-orange.png">
-      </div>
+      <table>
+        <tr>
+          <td>
+            <img class="modal__gems" src="images/gem-green.png">
+          </td>
+          <td>
+            <img class="modal__gems" src="images/gem-blue.png">
+          </td>
+          <td>
+            <img class="modal__gems" src="images/gem-orange.png">
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+        </tr>
+      </table>
       <p>Final Score:
         <span class="modal__score">0</span>
       </p>
