Score keeps track of gems now

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           </td>
         </tr>
         <tr>
-          <td>1</td>
-          <td>1</td>
-          <td>1</td>
+          <td class="modal__gems__green">1</td>
+          <td class="modal__gems__blue">1</td>
+          <td class="modal__gems__orange">1</td>
         </tr>
       </table>
       <p>Final Score:
