Changed the game over button to random color on hover

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
           <td class="modal__gems__orange">1</td>
         </tr>
       </table>
-      <p>Final Score:
-        <span class="modal__score">0</span>
-      </p>
+      <p class="modal__score">Final Score:</p>
       <p class="modal__highscore">High Score: </p>
-      <button onclick="resetGame();" class="modal__button">Play Again?</button>
+      <button onclick="resetGame();" class="modal__button green-gem">Try Again?</button>
     </div>
   </div>>
 
