--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="modal__highscore">High Score: </p>
       <button onclick="resetGame();" class="modal__button green-gem">Try Again?</button>
     </div>
-  </div>>
+  </div>
 
   </div>
   <script src="js/resources.js"></script>
