--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Bug Jump</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="images/gem-green.png" type="image/png">
+  <link rel="icon" href="images/gem-green.png" type="image/png">
 </head>
 
 <body>
